# OpenGL_stuff

./: CMakeLists.txt  README.md
include/: shader.h  utils.h
src/: camera_controller.cpp  learn.cpp  look_around.cpp  math.cpp  more_colors.cpp  perspective.cpp  rotating_cube.cpp  shader_abs.cpp  shaders.cpp  textures.cpp  uniforms.cpp
src/shaders/: simpleFrag.fs  simpleVert.vs  textVert.vs
